--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
         Arcade</h3>
     </header>
     <div class="grid place-items-center">
-      <a href="./Client/Pages/helloWorld.html"><button type="button"
+      <a href="./Pages/helloWorld.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Hello
           World!</button></a>
-      <a href="./Client/Pages/askingQuestions.html"><button type="button"
+      <a href="./Pages/askingQuestions.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Asking
           Questions</button></a>
-      <a href="./Client/Pages/addingTwoNumbers.html"><button type="button"
+      <a href="./Pages/addingTwoNumbers.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Adding
           Two Numbers</button></a>
-      <a href="./Client/Pages/madLib.html"><button type="button"
+      <a href="./Pages/MadLib/"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">MadLib</button></a>
-      <a href="./Client/Pages/oddOrEven.html"><button type="button"
+      <a href="./Pages/oddOrEven.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Odd
           or Even</button></a>
-      <a href="./Client/Pages/reverseIt.html"><button type="button"
+      <a href="./Pages/reverseIt.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Reverse
           It (Alphanumberic)</button></a>
-      <a href="./Client/Pages/reverseItNumsOnly.html"><button type="button"
+      <a href="./Pages/reverseItNumsOnly.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Reverse
           It (Numbers Only)</button></a>
-          <a href="./Client/Pages/greaterThanLessThan.html"><button type="button" class="text-black bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Greater Than Less Than</button></a>
-      <a href="./Client/Pages/magic8Ball.html"><button type="button"
+          <a href="./Pages/greaterThanLessThan.html"><button type="button" class="text-black bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Greater Than Less Than</button></a>
+      <a href="./Pages/magic8Ball.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Magic
           8 Ball</button></a>
-      <a href="./Client/Pages/restaurantPicker.html"><button type="button"
+      <a href="./Pages/restaurantPicker.html"><button type="button"
           class="text-gray-900 bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-2">Restaurant
           Picker</button></a>
     </div>
