altered page and folder names

--- a/Pages/madLib.html
+++ b/Pages/madLib.html
@@ -22,7 +22,7 @@
     </main>
 
 
-    <script src="../Scripts/madLib.js"></script>
+    <script src="../scripts/madLib.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
