--- a/Pages/helloWorld.html
+++ b/Pages/helloWorld.html
@@ -23,6 +23,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-    <script src="../Scripts/helloWorld.js"></script>
+    <script src="../scripts/helloWorld.js"></script>
 </body>
 </html>
