--- a/Pages/oddOrEven.html
+++ b/Pages/oddOrEven.html
@@ -23,7 +23,7 @@
 
 
 
-    <script type="module" src="../Scripts/oddOrEven.js"></script>
+    <script type="module" src="../scripts/oddOrEven.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
