--- a/Pages/reverseIt.html
+++ b/Pages/reverseIt.html
@@ -23,7 +23,7 @@
     </main>    
 
 
-    <script type="module" src="../Scripts/reverseIt.js"></script>
+    <script type="module" src="../scripts/reverseIt.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
